fix: tags should wrap multiple lines

--- a/src/text-input-highlight.scss
+++ b/src/text-input-highlight.scss
@@ -24,6 +24,5 @@
     border-radius: 8px;
     padding: 1px 3px;
     margin: -1px -3px;
-    display: inline-block;
   }
 }
